fix: remove redundant UserRequest and UserResource (#63)
* fix: remove redundant UserRequest and UserResource

* update docs manually
