# business/validation/validate.go
@@ -32,7 +32,7 @@ const (
 )
 
 // ValidateUser checks registration request validity
-func ValidateUser(u *store.UserRequest) error {
+func ValidateUser(u *store.User) error {
 	if u == nil {
 		return errEmptyUser
 	}
